--- a/games/doom-pwad-sigil/Makefile
+++ b/games/doom-pwad-sigil/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2019/08/26 16:48:56 micha Exp $
+# $NetBSD: Makefile,v 1.2 2019/08/29 12:12:29 micha Exp $
 
 DISTNAME=		sigil_v1_1
-PKGNAME=		doom2-pwad-sigil-1.1
+PKGNAME=		doom-pwad-sigil-1.1
 CATEGORIES=		games
 MASTER_SITES=		ftp://ftp.fu-berlin.de/pc/games/idgames/levels/doom/Ports/s-u/
 MASTER_SITES+=		ftp://mirrors.syringanetworks.net/idgames/levels/doom/Ports/s-u/
