--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2903 2019/08/27 21:17:22 markd Exp $
+# $NetBSD: Makefile,v 1.2904 2019/08/29 13:45:24 he Exp $
 #
 
 COMMENT=	Development utilities
@@ -394,6 +394,7 @@ SUBDIR+=	go-goorgeous
 SUBDIR+=	go-gopkgs
 SUBDIR+=	go-goptlib
 SUBDIR+=	go-goreturns
+SUBDIR+=	go-gox
 SUBDIR+=	go-hashstructure
 SUBDIR+=	go-homedir
 SUBDIR+=	go-humanize
