--- a/cad/kicad/Makefile
+++ b/cad/kicad/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.37 2019/08/22 12:22:52 ryoon Exp $
+# $NetBSD: Makefile,v 1.38 2019/08/29 15:36:39 bouyer Exp $
 #
 
-V=		5.1.2
+V=		5.1.4
 DISTNAME=	kicad-${V}
-PKGREVISION=	4
 CATEGORIES=	cad
 MASTER_SITES=	https://launchpad.net/kicad/5.0/${V}/+download/
 EXTRACT_SUFX=	.tar.xz
