--- a/games/easyrpg-player/Makefile
+++ b/games/easyrpg-player/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2019/08/07 08:44:50 nia Exp $
+# $NetBSD: Makefile,v 1.5 2019/08/29 16:46:32 nia Exp $
 
 DISTNAME=	easyrpg-player-0.6.1
 CATEGORIES=	games
-MASTER_SITES=	https://easyrpg.org/downloads/player/
+MASTER_SITES=	https://easyrpg.org/downloads/player/${PKGVERSION_NOREV}/
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	nia@NetBSD.org
