--- a/www/goaccess/Makefile
+++ b/www/goaccess/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2019/08/29 10:04:30 schmonz Exp $
+# $NetBSD: Makefile,v 1.20 2019/08/29 18:04:10 schmonz Exp $
 
 DISTNAME=	goaccess-1.3
 CATEGORIES=	www
@@ -9,10 +9,12 @@ HOMEPAGE=	http://goaccess.prosoftcorp.com/
 COMMENT=	Real-time web log analyzer
 LICENSE=	gnu-gpl-v2
 
+TOOL_DEPENDS+=	gettext-tools-[0-9]*:../../devel/gettext-tools
+
 GNU_CONFIGURE=	yes
 
 USE_LANGUAGES=	c99
-USE_TOOLS+=     pkg-config aclocal autoconf automake
+USE_TOOLS+=	pkg-config aclocal autoconf automake
 USE_NCURSES=	yes
 
 EGDIR=		${PREFIX}/share/examples/${PKGBASE}
