--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.843 2019/08/24 09:01:04 nia Exp $
+# $NetBSD: Makefile,v 1.844 2019/08/30 06:30:57 markd Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -379,6 +379,7 @@ SUBDIR+=	qt5-qtquickcontrols2
 SUBDIR+=	qt5-qtscript
 SUBDIR+=	qt5-qtsensors
 SUBDIR+=	qt5-qtserialport
+SUBDIR+=	qt5-qtspeech
 SUBDIR+=	qt5-qtsvg
 SUBDIR+=	qt5-qttools
 SUBDIR+=	qt5-qttranslations
