--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.842 2019/08/21 17:40:41 nia Exp $
+# $NetBSD: Makefile,v 1.843 2019/08/30 12:33:22 nia Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -311,6 +311,7 @@ SUBDIR+=	libggiwmh
 SUBDIR+=	libgii
 SUBDIR+=	libgiigic
 SUBDIR+=	libgltf
+SUBDIR+=	libglvnd
 SUBDIR+=	libgnomecanvas
 SUBDIR+=	libgnomecanvasmm
 SUBDIR+=	libimagequant
