--- a/devel/boost-jam/Makefile
+++ b/devel/boost-jam/Makefile
@@ -1,5 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2019/08/22 12:17:52 ryoon Exp $
+# $NetBSD: Makefile,v 1.12 2019/08/30 15:30:44 ryoon Exp $
 
+PKGREVISION=		1
 BOOST_PACKAGE=		jam
 BOOST_COMMENT=		(Boost.Jam utility)
 BOOST_CONFIG=		no
@@ -17,6 +18,9 @@ SUBST_SED.bb=		-e 's,/usr/share/boost-build,${PREFIX}/share/boost-build,g'
 .include "../../devel/boost-build/toolset.mk"
 
 INSTALLATION_DIRS=	bin
+
+# Fix RELRO build
+CXXFLAGS+=	${LDFLAGS}
 
 do-build:
 	cd ${WRKSRC}/tools/build/src/engine && \
