--- a/graphics/MesaLib/Makefile
+++ b/graphics/MesaLib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.161 2019/09/02 19:43:06 nia Exp $
+# $NetBSD: Makefile,v 1.162 2019/09/02 20:28:34 nia Exp $
 
 DISTNAME=	mesa-19.1.5
 PKGNAME=	${DISTNAME:S/mesa/MesaLib/}
@@ -152,7 +152,7 @@ CPPFLAGS+=	-DHAVE_NOATEXIT
 CPPFLAGS+=	-DSYSCONFDIR=${PKG_SYSCONFDIR}
 
 BUILDLINK_TRANSFORM+=		rm:-Werror=return-type
-BUILDLINK_TRANSFORM.SunOS+=	rm:--build-id=sha1
+BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--build-id=sha1
 
 # Work around Xorg segfaulting in radeon driver due to wrong alloca being used
 CFLAGS.NetBSD+=		-Dalloca=__builtin_alloca
