--- a/devel/talloc/Makefile
+++ b/devel/talloc/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.36 2019/04/25 07:32:50 maya Exp $
+# $NetBSD: Makefile,v 1.37 2019/09/05 09:02:11 adam Exp $
 
-DISTNAME=	talloc-2.2.0
-PKGREVISION=	1
+DISTNAME=	talloc-2.3.0
 CATEGORIES=	devel
 MASTER_SITES=	http://www.samba.org/ftp/talloc/
 
