--- a/databases/tdb/Makefile
+++ b/databases/tdb/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.40 2019/08/23 10:49:14 adam Exp $
+# $NetBSD: Makefile,v 1.41 2019/09/05 12:39:56 hauke Exp $
 
 DISTNAME=	tdb-1.4.2
+PKGREVISION=	1
 CATEGORIES=	databases
 MASTER_SITES=	http://www.samba.org/ftp/tdb/
 
