--- a/textproc/bat/Makefile
+++ b/textproc/bat/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2019/09/03 15:12:22 fox Exp $
+# $NetBSD: Makefile,v 1.4 2019/09/06 17:32:04 fox Exp $
 
 DISTNAME=	bat-0.12.1
+PKGREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=sharkdp/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -164,5 +165,6 @@ do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/target/release/bat ${DESTDIR}${PREFIX}/bin
 	${INSTALL_MAN} ${WRKSRC}/doc/bat.1 ${DESTDIR}${PREFIX}/${PKGMANDIR}/man1
 
+.include "../../lang/clang/buildlink3.mk"
 .include "../../lang/rust/cargo.mk"
 .include "../../mk/bsd.pkg.mk"
