--- a/audio/festival/Makefile
+++ b/audio/festival/Makefile
@@ -1,15 +1,14 @@
-# $NetBSD: Makefile,v 1.77 2019/08/11 13:17:53 wiz Exp $
+# $NetBSD: Makefile,v 1.78 2019/09/07 13:00:48 nia Exp $
 
-DISTNAME=	festival-2.1-release
-PKGNAME=	festival-2.1
-PKGREVISION=	9
+DISTNAME=	festival-2.5.0-release
+PKGNAME=	${DISTNAME:S/-release//}
 CATEGORIES=	audio
-MASTER_SITES=	http://festvox.org/packed/festival/2.1/
+MASTER_SITES=	http://festvox.org/packed/festival/2.5/
 DISTFILES=	${DISTNAME}.tar.gz \
-		speech_tools-2.1-release.tar.gz
+		speech_tools-${PKGVERSION_NOREV}-release.tar.gz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://www.cstr.ed.ac.uk/projects/festival/
+HOMEPAGE=	http://festvox.org/festival/index.html
 COMMENT=	Advanced multi-lingual speech synthesis system
 LICENSE=	original-bsd
 
@@ -27,9 +26,6 @@ GNU_CONFIGURE=		yes
 CONFIGURE_SCRIPT=	${SPEECHTOOLS}/configure
 CONFIG_GUESS_OVERRIDE=	${SPEECHTOOLS}/config.guess ${FESTIVAL}/config.guess
 CONFIG_SUB_OVERRIDE=	${SPEECHTOOLS}/config.sub ${FESTIVAL}/config.sub
-
-MAKE_ENV+=	BUILDLINK_CPPFLAGS=${BUILDLINK_CPPFLAGS:Q}
-MAKE_ENV+=	BUILDLINK_LDFLAGS=${BUILDLINK_LDFLAGS:Q}
 
 .include "../../mk/bsd.prefs.mk"
 .include "../../mk/compiler.mk"
@@ -56,8 +52,8 @@ MAKE_ENV+=	PKG_EST_HOME=${SPEECHTOOLS:Q}				\
 		PKG_FESTIVAL_BUILD_HOME=${FESTIVAL:Q}			\
 		PKG_FESTIVAL_HOME=${FHOME:Q}				\
 		PKG_COMPILER=${PKG_COMPILER:Q}				\
-		PKG_X11BASE=${X11BASE:Q}				\
-		PKG_PREFIX=${PREFIX:Q}					\
+		PKG_X11BASE=${X11BASE}					\
+		PKG_PREFIX=${PREFIX}					\
 		EGCS_CC=${CC:Q}						\
 		EGCS_CXX=${CXX:Q}					\
 		GCC295_CC=${CC:Q}					\
@@ -119,10 +115,9 @@ do-install:
 	${INSTALL_MAN} ${FESTIVAL}/doc/festival_client.1		\
 		${DESTDIR}${PREFIX}/${PKGMANDIR}/man1/festival_client.1
 
-.include "../../audio/nas/buildlink3.mk"
-.if ${OPSYS} == "Linux"
-# See DebianGNULinux.mak
-.include "../../mk/curses.buildlink3.mk"
-.endif
 .include "../../mk/termcap.buildlink3.mk"
+BUILDLINK_TRANSFORM+=	rm:-lcurses
+BUILDLINK_TRANSFORM+=	rm:-lncurses
+MAKE_ENV+=		BUILDLINK_CPPFLAGS=${BUILDLINK_CPPFLAGS:Q}
+MAKE_ENV+=		BUILDLINK_LDFLAGS=${BUILDLINK_LDADD.termcap:Q}
 .include "../../mk/bsd.pkg.mk"
